<resources>
    <string name="app_name">formulario</string>
    <string name="titulo">INICIO SESION</string>
    <string name="hint_nombre">Introduce nombre</string>
    <string name="hint_correo">Introduce correo</string>
    <string name="hint_pass">Introduce pass</string>
    <string name="text_pass">Recordar contraseña</string>
    <string name="btn_clear">Vaciar</string>
    <string name="btn_login">Login</string>
</resources>